src/app/main-conten/projects/projects.component.scss
@import "../../../mixin.scss";
@import "../../../styles.scss";

:host{
  box-sizing: border-box;
}
.project-container {
  @include flex-center($jc: space-between, $ai:stretch);
  gap: $gap-24;
  width: 100%;
  height: auto;
  max-width: $max-width;
  margin: 0 auto 10rem;
  overflow-x: hidden;

}
  .project-container:nth-child(2n) {
    flex-direction: row-reverse;
  }
  .project-container:nth-child(2n) .text-container-project {
    align-items: flex-end;
    text-align: right;
  }
  .project-container:nth-child(2n) .links {
    justify-content: flex-end;
  }
  .project-container:nth-child(2n+1) .text-container-project {
    align-items: flex-start;
    text-align: left;
  }
  .project-container:nth-child(2n+1) .links {
    justify-content: flex-start;
  }
.project-container.force-left {
  flex-direction: row-reverse;
}
.project-container.force-left .text-container-project {
  align-items: flex-start;
  text-align: left;
}
.project-container.force-left .links {
  justify-content: flex-start;
}
.image-container {
  position: relative;
  width: auto; 
  height: auto; 
  max-width: 36.75rem;
}

.image-container video {
  display: block;
  width: 100%; 
  height: auto; 
}

.image-container .video-poster-fallback {
  display: block;
  width: 100%;
  height: auto;
}

.image-container .video-poster-overlay {
  position: absolute;
  inset: 0;
  width: 100%;
  height: 100%;
  object-fit: cover;
  opacity: 1;
  pointer-events: none;
  transition: opacity 200ms ease-out;
}

.image-container:hover .video-poster-overlay.is-loaded {
  opacity: 0;
}

.image-container .video-poster-overlay.is-loaded {
  animation: poster-fade-in 220ms ease-out;
}

@keyframes poster-fade-in {
  from { opacity: 0.7; }
  to { opacity: 1; }
}

.project-container > .image-container,
.project-container > .text-container-project {
  flex: 1 1 0;
  min-width: 0;
}

.project-container > .image-container {
  width: 100%;
  max-width: none;
}

.text-container-project {
  display: flex;
  flex-direction: column;
  align-items: flex-start;
  text-align: left;
  align-self: stretch;
  justify-content: space-between;
}



h3 {
  @include fonts($fc:$turquoise,$fw:$bold,$fs:$f-s-48);
  margin-bottom:$gap-32 ;
}

h5{
  @include fonts($fc:$turquoise,$fs:$f-s-18);
  margin-bottom:$gap-32 ;
}

.links {
  @include flex-center($jc: flex-start); 
  margin-top: auto;

  a {
    @include fonts($fc:$turquoise,$fs:$f-s-18);
    padding: 0.9375rem 1.875rem;
  }

  a:first-child {
    color: $primary-red;
    border: solid 1px $turquoise;
    transition: all 125ms ease-out;
    &:hover{
      color:$turquoise ; 
    }
  }

  a:nth-child(2) {
    margin-left: $gap-10;
   background-color:$turquoise ;
   color:$backround-blue ;
   transition: all 125ms ease-out;
   &:hover{
    color:$primary-red ; 
  }
    
  }
}


.fade-in-left {
  overflow-x: hidden;
  opacity: 0;
  transform: translateX(-100px);               
  transition: opacity 125ms ease-out,
              transform 125ms ease-out;
}
.fade-in-left.in-view {
  opacity: 1;
  transform: translateX(0);
}


.fade-in-right {
  opacity: 0;
  transform: translateX(100px);                
  transition: opacity 125ms ease-out,
              transform 125ms ease-out;
}
.fade-in-right.in-view {
  opacity: 1;
  transform: translateX(0);
}
.mobile-video{
  display: none;
}
@media (max-width: 768px) {

  h1 {
    white-space: normal !important;
    text-align: center !important;
  }
  h2 {
    white-space: normal !important;
    text-align: center !important;
  }
  .text-container-project{
    width: 91%;
  }
  .video{
    display: none;
  }
  .mobile-video{
    display: block;
    margin: 3rem 0;
  }
}

@media (max-width: 900px) {
  .project-container {
    flex-direction: column;
    align-items: center;
  }

  .project-container:nth-child(2n) .text-container-project,
  .project-container:nth-child(2n+1) .text-container-project,
  .project-container.force-left .text-container-project {
    align-items: center;
    text-align: center;
  }

  .project-container:nth-child(2n) .links,
  .project-container:nth-child(2n+1) .links,
  .project-container.force-left .links {
    justify-content: center;
  }

  .image-container {
    max-width: 100%;
    width: 100%;
  }

  .text-container-project {
    width: 100%;
    align-items: center;
    text-align: center;
  }

  .links {
    justify-content: center;
    flex-wrap: wrap;
  }
}

